<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcd039"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fcf2d0"
        android:layout_centerInParent="true">
        <com.ssomai.android.scalablelayout.ScalableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:scale_base_width="1920"
            app:scale_base_height="1080"
            android:background="@drawable/main_background"
            >
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="131"
                app:scale_top="76"
                app:scale_width="76"
                app:scale_height="79"
                android:background="@drawable/btn_back"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="336"
                app:scale_top="293"
                app:scale_width="223"
                app:scale_height="191"
                android:background="@drawable/btn_groupwizard_unpress"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="732"
                app:scale_top="237"
                app:scale_width="388"
                app:scale_height="138">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_scan"
                    android:text="@string/search_cube"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="607"
                app:scale_top="386"
                app:scale_width="151"
                app:scale_height="144"

                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_r"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_r"/>
                <TextView
                    android:id="@+id/tv_cube_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/red_do"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="793"
                app:scale_top="386"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_g"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_g"/>
                <TextView
                    android:id="@+id/tv_cube_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/green_re"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="979"
                app:scale_top="386"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                   />
                <ImageView
                    android:id="@+id/iv_cube_b"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_b"/>
                <TextView
                    android:id="@+id/tv_cube_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/blue_mi"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="1165"
                app:scale_top="386"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_c"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_c"/>
                <TextView
                    android:id="@+id/tv_cube_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/cyan_fa"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="607"
                app:scale_top="554"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_m"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_m"/>
                <TextView
                    android:id="@+id/tv_cube_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/magenta_sol"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="793"
                app:scale_top="554"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_y"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_y"/>
                <TextView
                    android:id="@+id/tv_cube_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/yellow_ra"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="979"
                app:scale_top="554"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_v"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_v"/>
                <TextView
                    android:id="@+id/tv_cube_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/violet_si"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cube_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="1165"
                app:scale_top="554"
                app:scale_width="151"
                app:scale_height="144"
                >
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="star_moving.json"
                    android:layout_alignParentStart="true"
                    />
                <ImageView
                    android:id="@+id/iv_cube_o"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_o"/>
                <TextView
                    android:id="@+id/tv_cube_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:text="@string/orange_do"/>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_fir_group_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="773"
                app:scale_top="704"
                app:scale_width="202"
                app:scale_height="197"
                >
                <ImageView
                    android:id="@+id/iv_fir_group_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:scale_width="151"
                    app:scale_height="144"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/tv_fir_group_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:id="@+id/iv_fir_group_line"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_select"/>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_sec_group_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="997"
                app:scale_top="704"
                app:scale_width="202"
                app:scale_height="197"
                >
                <ImageView
                    android:id="@+id/iv_sec_group_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:scale_width="151"
                    app:scale_height="144"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/tv_sec_group_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:id="@+id/iv_sec_group_line"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_cube_unselect"/>
            </RelativeLayout>


            <ImageView
                android:id="@+id/iv_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="1357"
                app:scale_top="367"
                app:scale_width="199"
                app:scale_height="158"
                android:background="@drawable/btn_set"
                />


            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:scale_left="1357"
                app:scale_top="540"
                app:scale_width="199"
                app:scale_height="158"
                android:background="@drawable/btn_clear"
                />
        </com.ssomai.android.scalablelayout.ScalableLayout>
    </RelativeLayout>
</RelativeLayout>

